--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
